# summer-school-backend-jlug

./: .env.template  .gitignore  README.md  SECURITY.md  main.py  pyproject.toml
app/: main.py
app/core/: config.py  db.py  logger.py
app/core/utils/: BrevoEmail.py  bad_words.py
app/dependencies/: auth.py  user_workshop.py
app/middlewares/: cors.py  request_logger.py
app/routers/: assignments.py  auth.py  certificates.py  health.py  leaderboard.py  notificationRouter.py  reviews.py  user_workshop.py  users.py  workshops.py
app/schemas/: assignment.py  auth.py  certificate.py  leaderboard.py  response.py  review.py  user.py  user_workshop.py  workshop.py
app/services/: assignment.py  auth.py  certificate.py  leaderboard.py  notification.py  review.py  user.py  user_workshop.py  workshop.py
