[project]
name = "Summer-School-Jlug-Backend"
version = "0.1.0"
description = "This is my summer School project backend for jlug"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "colorlog>=6.9.0",
    "dotenv>=0.9.9",
    "fastapi>=0.116.1",
    "pydantic[email]>=2.11.7",
    "pydantic-settings>=2.10.1",
    "python-jose[cryptography]>=3.5.0",
    "supabase>=2.17.0",
    "uvicorn>=0.35.0",
]
